# pyMOSF

./: .gitignore  CHANGELOG  README.md  deploy.sh  pyproject.toml  requirment.txt  setup.cfg  setup.py
pyMOSF/config/: __init__.py  config.toml  configs.py  tomllib_w.py
pyMOSF/core/: __boxed__.py  __core__.py  __decorators__.py  __image_services__.py  __init__.py  __loggers__.py  __safe_calls__.py  pipelines.py
pyMOSF/kivy/: __core__.py  __init__.py
pyMOSF/kivy/services/: __init__.py  io.py
pyMOSF/services/: open_file_ios.py  photo_picker_ios.py
pyMOSF/templates/kivy/: README.md  app.py  example_layouts.kv  example_layouts.py
pyMOSF/templates/toga/: README.md  __main__.py  app.py  example_layouts.py
pyMOSF/toga/: __core__.py  __init__.py
pyMOSF/toga/services/: io.py
tests/: test_core.py  test_pipelines.py
