[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMOSF"
version = "0.1.1.9"
description = "Python package for Multi-OS, Multi-Framework UI apps."
authors = [
    {name = "Roozbeh H. Pazuki", email = "rpazuki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.6"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.18.0",
    "addict>=2.4.0",
    "pytoml>=0.1.21",
    "rubicon-objc>=0.4.9",
]

[project.urls]
Homepage = "https://github.com/rpazuki/pyMOSF"
Issues = "https://github.com/rpazuki/pyMOSF/issues"

# You can keep using your setup.cfg for dependencies

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "flake8>=3.8.0",
]
beeware = [
    "PyGObject==3.50.0",
    "briefcase>=0.3.22",
    "toga==0.4.9",
]
kivy = [
    "kivy>=2.3.1",
]
all = [
    "pytest>=6.0.0",
    "flake8>=3.8.0",
    "PyGObject==3.50.0",
    "briefcase>=0.3.22",
    "toga==0.4.9",
    "kivy>=2.3.1",
]
release =[
]