[metadata]
name = pyMOSF
version = 0.1
description = Python package for Multi-OS, Multi-Framework UI apps.
author = Roozbeh H. Pazuki
author_email = rpazuki@gmail.com
url = https://github.com/rpazuki/pyMOSF
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy>=1.18.0
    addict>=2.4.0
    pytoml>=0.1.21
    rubicon-objc>=0.5.0


[options.extras_require]
dev =
    pytest>=6.0.0
    flake8>=3.8.0

#
beeware =
    PyGObject==3.50.0
    briefcase>=0.3.22
    toga==0.4.9

kivy =
    kivy>=2.3.1

all =
    pytest>=6.0.0
    flake8>=3.8.0
    PyGObject==3.50.0
    briefcase>=0.3.22
    toga==0.4.9
    kivy>=2.3.1

[flake8]
max-line-length = 99
exclude = .git,.pytest_cache,__pycache__,build,dist